# esa-waypoint

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  Dockerfile.backend  Dockerfile.backup  Dockerfile.frontend  README.md  dev.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  renovate.json
docs/: PRD-phase2.md  openapi.yaml
scripts/: backup.sh  check-prod-imports.sh
src/: __init__.py  audit.py  brief.py  brief_builder.py  brief_prompts.py  check_horaro_parity.py  db.py  evaluate.py  find_incentives.py  horaro.py  import_to_sqlite.py  incentives.py  llm_client.py  news.py  news_rss.py  news_speedrun.py  oengus.py  pipeline.py  slugs.py  snapshot.py  spreadsheet.py  src_api.py  tiltify.py  tiltify_push.py  xlsx_reader.py
tests/: conftest.py  test_admin.py  test_admin_restore.py  test_audit.py  test_auth.py  test_brief.py  test_brief_builder.py  test_briefs_llm.py  test_briefs_routes.py  test_check_horaro_parity.py  test_db.py  test_evaluate.py  test_find_incentives.py  test_health.py  test_horaro.py  test_import_to_sqlite.py  test_incentives.py  test_news.py  test_notes.py  test_oengus.py  test_pipeline.py  test_repo_sqlite.py  test_runner_notes.py  (+10 more)
web/backend/: app.py  auth.py  auth_admin.py  config.py  deps.py  limiter.py  markdown_render.py  models.py  pyproject.toml  repo.py  repo_sqlite.py
web/backend/routes/: admin.py  auth.py  briefs.py  health.py  incentives.py  news.py  notes.py  runner_notes.py  runners.py  runs.py  streams.py
web/backend/static/: llms.txt  openapi.yaml
(+38 files in other folders)
