[project]
name = "esa-web-backend"
version = "0.1.0"
description = "FastAPI backend for ESA host brief web viewer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "itsdangerous>=2.2",
    "pydantic>=2.0",
    "pydantic-settings>=2",
    "markdown>=3.7",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20",
]
[project.scripts]
esa-web = "web.backend.app:main"
